# zeeshit

./: CMakeLists.txt  main.cpp
headerFiles/: algorithms.h  ocrprocess.h  preprocess.h
sourceFiles/: DumpFunctions.cpp  algorithms.cpp  ocrprocess.cpp  preprocess.cpp
